--- a/drivers/crypto/Kconfig
+++ b/drivers/crypto/Kconfig
@@ -900,4 +900,6 @@ config CRYPTO_DEV_SA2UL
 	  used for crypto offload.  Select this if you want to use hardware
 	  acceleration for cryptographic algorithms on these devices.
 
+source "drivers/crypto/keembay/Kconfig"
+
 endif # CRYPTO_HW
