x86/build: Add {kvm_guest,xen}.config targets to make help's output
Add the targets which add additional items to the .config which
facilitate running the kernel as a guest, to the 'make help' output so
that they can be found easier and there's no need to grep the tree each
time to remember what they should be called.

Signed-off-by: Borislav Petkov <bp@suse.de>
Link: https://lkml.kernel.org/r/20201217134608.31811-1-bp@alien8.de

--- a/arch/x86/Makefile
+++ b/arch/x86/Makefile
@@ -304,4 +304,7 @@ define archhelp
   echo  '                  bzdisk/fdimage*/isoimage also accept:'
   echo  '                  FDARGS="..."  arguments for the booted kernel'
   echo  '                  FDINITRD=file initrd for the booted kernel'
+  echo  '  kvm_guest.config - Enable Kconfig items for running this kernel as a KVM guest'
+  echo  '  xen.config	  - Enable Kconfig items for running this kernel as a Xen guest'
+
 endef
